--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,8 +50,8 @@ services:
       PORT: 3000
       DATABASE_URL: postgresql://phoenix:phoenix_dev@postgres:5432/phoenix_explorer?sslmode=disable
       REDIS_URL: redis://redis:6379
-      PHOENIX_RPC_URL: ${PHOENIX_RPC_URL:-http://host.docker.internal:8545}
-      CORS_ORIGIN: ${CORS_ORIGIN:-http://localhost:6663}
+      PHOENIX_RPC_URL: ${PHOENIX_RPC_URL:-http://testnet-rpc.bdp.network:16210}
+      CORS_ORIGIN: ${CORS_ORIGIN:-http://testnet.bdpscan.com:6663}
     ports:
       - "6662:3000"
     depends_on:
@@ -76,8 +76,8 @@ services:
     container_name: phoenix-explorer-frontend
     environment:
       NODE_ENV: production
-      NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-http://localhost:6662}
-      NEXT_PUBLIC_WS_URL: ${NEXT_PUBLIC_WS_URL:-ws://localhost:6662/ws}
+      NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-http://testnet-api.bdpscan.com:6662}
+      NEXT_PUBLIC_WS_URL: ${NEXT_PUBLIC_WS_URL:-ws://testnet-api.bdpscan.com:6662/ws}
     ports:
       - "6663:3000"
     depends_on:
@@ -99,7 +99,7 @@ services:
     container_name: phoenix-explorer-indexer
     environment:
       DATABASE_URL: postgresql://phoenix:phoenix_dev@postgres:5432/phoenix_explorer?sslmode=disable
-      PHOENIX_RPC_URL: ${PHOENIX_RPC_URL:-http://host.docker.internal:8545}
+      PHOENIX_RPC_URL: ${PHOENIX_RPC_URL:-http://testnet-rpc.bdp.network:16210}
       INDEXER_BATCH_SIZE: ${INDEXER_BATCH_SIZE:-10}
       INDEXER_WORKERS: ${INDEXER_WORKERS:-5}
       LOG_LEVEL: ${LOG_LEVEL:-info}
